# ReceiptDetective

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
backend/: auth.py
backend/ai/: __init__.py  servicer.py
backend/ai/assistants/: __init__.py  analyzer.py  base.py  ocr.py  translator.py
backend/ai/datatypes/: __init__.py  ocr_response.py
backend/ai/prompts/: analyzer.txt  ocr.txt  translator.txt
datatypes/: __init__.py  categories.py  common.py  ocr_result.py  product.py  receipt.py  receipt_ocr_result.py
